# protofuzz

./: BUILD  LICENSE  README.md  WORKSPACE  deps.bzl  go.mod  go.sum  nogo_config.json
protoc-gen-go-fuzz/: BUILD  main.go
protoc-gen-go-fuzz/plugin/: BUILD  plugin.go
tests/: BUILD  test.proto  tests_test.go
tools/: BUILD.bazel  tools.go
