load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "tools_lib",
    srcs = ["tools.go"],
    importpath = "github.com/hxtk/protofuzz/tools",
    visibility = ["//visibility:private"],
    deps = ["@com_github_google_gofuzz//:gofuzz"],
)

go_binary(
    name = "tools",
    embed = [":tools_lib"],
    visibility = ["//visibility:public"],
)
